--- a/Thrones2Vec.ipynb
+++ b/Thrones2Vec.ipynb
@@ -155,7 +155,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "book_filenames = sorted(glob.glob(\"data/*.txt\"))"
+    "filenames = sorted(glob.glob(\"data/*.txt\"))\n",
+    "\n",
+    "# remove sos.txt\n",
+    "book_filenames = filenames[0:5]"
    ]
   },
   {
@@ -241,16 +244,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOT ONE WORD HAS BEEN OMITTED.\n"
+     ]
+    }
+   ],
    "source": [
-    "raw_sentences = tokenizer.tokenize(corpus_raw)"
+    "raw_sentences = tokenizer.tokenize(corpus_raw)\n",
+    "print(raw_sentences[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
