updated iphone2Vec to use correct naming

--- a/iphone2Vec.ipynb
+++ b/iphone2Vec.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# song2Vec"
+    "# iphone2Vec"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using only the raw text of [A Song of Ice and Fire](https://en.wikipedia.org/wiki/A_Song_of_Ice_and_Fire), we'll derive and explore the semantic properties of its words.\n",
+    "Using the text kindly compiled by Eugene Yuen\n",
     "\n",
     "#### Note: Converted to run on Python 3 and gensim-3.4.0\n"
    ]
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +70,15 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gabrielmanuelsidik/anaconda3/lib/python3.6/site-packages/IPython/core/magics/pylab.py:160: UserWarning: pylab import has clobbered these variables: ['seed']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n",
+      "  \"\\n`%matplotlib` prevents importing * from pylab and numpy\"\n"
      ]
     }
    ],
@@ -352,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "song2vec = w2v.Word2Vec(\n",
+    "iphone2vec = w2v.Word2Vec(\n",
     "    sg=1,\n",
     "    seed=seed,\n",
     "    workers=num_workers,\n",
@@ -399,7 +408,7 @@
     }
    ],
    "source": [
-    "song2vec.build_vocab(sentences)"
+    "iphone2vec.build_vocab(sentences)"
    ]
   },
   {
@@ -435,7 +444,7 @@
     }
    ],
    "source": [
-    "print(\"Word2Vec vocabulary length:\", len(song2vec.wv.vocab))"
+    "print(\"Word2Vec vocabulary length:\", len(iphone2vec.wv.vocab))"
    ]
   },
   {
@@ -520,7 +529,7 @@
     }
    ],
    "source": [
-    "song2vec.train(sentences, total_examples=song2vec.corpus_count, epochs=10)"
+    "iphone2vec.train(sentences, total_examples=iphone2vec.corpus_count, epochs=10)"
    ]
   },
   {
@@ -557,7 +566,7 @@
     }
    ],
    "source": [
-    "song2vec.save(os.path.join(\"trained\", \"iphone2vec.w2v\"))"
+    "iphone2vec.save(os.path.join(\"trained\", \"iphone2vec.w2v\"))"
    ]
   },
   {
@@ -587,7 +596,7 @@
     }
    ],
    "source": [
-    "song2vec = w2v.Word2Vec.load(os.path.join(\"trained\", \"iphone2vec.w2v\"))"
+    "iphone2vec = w2v.Word2Vec.load(os.path.join(\"trained\", \"iphone2vec.w2v\"))"
    ]
   },
   {
@@ -613,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_word_vectors_matrix = song2vec.wv.vectors"
+    "all_word_vectors_matrix = iphone2vec.wv.vectors"
    ]
   },
   {
@@ -649,8 +658,8 @@
     "    [\n",
     "        (word, coords[0], coords[1])\n",
     "        for word, coords in [\n",
-    "            (word, all_word_vectors_matrix_2d[song2vec.wv.vocab[word].index])\n",
-    "            for word in song2vec.wv.vocab\n",
+    "            (word, all_word_vectors_matrix_2d[iphone2vec.wv.vocab[word].index])\n",
+    "            for word in iphone2vec.wv.vocab\n",
     "        ]\n",
     "    ],\n",
     "    columns=[\"word\", \"x\", \"y\"]\n",
@@ -937,7 +946,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.most_similar(\"power\")"
+    "iphone2vec.wv.most_similar(\"power\")"
    ]
   },
   {
@@ -966,7 +975,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.most_similar(\"Internet\")"
+    "iphone2vec.wv.most_similar(\"Internet\")"
    ]
   },
   {
@@ -995,7 +1004,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.most_similar(\"music\")"
+    "iphone2vec.wv.most_similar(\"music\")"
    ]
   },
   {
@@ -1012,7 +1021,7 @@
    "outputs": [],
    "source": [
     "def nearest_similarity_cosmul(start1, end1, end2):\n",
-    "    similarities = song2vec.wv.most_similar_cosmul(\n",
+    "    similarities = iphone2vec.wv.most_similar_cosmul(\n",
     "        positive=[end2, start1],\n",
     "        negative=[end1]\n",
     "    )\n",
@@ -1088,7 +1097,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.similarity(\"listen\", \"play\")"
+    "iphone2vec.wv.similarity(\"listen\", \"play\")"
    ]
   },
   {
@@ -1108,7 +1117,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.similarity(\"listen\", \"network\")"
+    "iphone2vec.wv.similarity(\"listen\", \"network\")"
    ]
   },
   {
@@ -1128,7 +1137,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.similarity(\"listen\", \"library\")"
+    "iphone2vec.wv.similarity(\"listen\", \"library\")"
    ]
   },
   {
@@ -1148,7 +1157,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.similarity(\"listen\", \"songs\")"
+    "iphone2vec.wv.similarity(\"listen\", \"songs\")"
    ]
   },
   {
@@ -1168,7 +1177,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.similarity(\"turn\", \"on\")"
+    "iphone2vec.wv.similarity(\"turn\", \"on\")"
    ]
   },
   {
@@ -1188,7 +1197,7 @@
     }
    ],
    "source": [
-    "song2vec.wv.similarity(\"on\", \"iPhone\")"
+    "iphone2vec.wv.similarity(\"on\", \"iPhone\")"
    ]
   },
   {
